--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,5 +21,5 @@ mybatis.type-aliases-package=com.diary.management.nikku.Model
 logging.level.com.diary.management.nikku=debug
 
 #Spring??????
-spring.security.user.name=nagmaoto
-spring.security.user.password=nagamoto
+#spring.security.user.name=nagmaoto
+#spring.security.user.password=nagamoto
